add delete button

--- a/django_llm/src/templates/chat_bot/index.html
+++ b/django_llm/src/templates/chat_bot/index.html
@@ -35,7 +35,7 @@
                     <img src="media/icon/{{ chat.name }}.png" width="30" height="30">
                     <div class="user-name">{{ chat.name }}</div>
                 </div>
-                <div class="chat-message">{{ chat.message }}</div>
+                <div class="chat-message" style="white-space: pre-line;">{{ chat.message }}</div>
             </div>
             {% endfor %}
         </div>
