--- a/django_llm/src/templates/management/index.html
+++ b/django_llm/src/templates/management/index.html
@@ -4,150 +4,147 @@
 {% load static %}
 
 {% block additional_header %}
+<script>
+  jQuery(function ($) {
+    $("#document-list-table").DataTable();
+    $("#document-group-table").DataTable();
+    $("#document-upload-table").DataTable();
+  });
+</script>
 <link rel="stylesheet" href="{% static 'css/management.css' %}">
 {% endblock %}
 
 {% block content %}
-<div class="container">
-  <div>
-    <h2>リスト</h2>
-    <table class="pdf-table">
-      <thead>
-          <tr>
+<div class="container-lg" style="background-color: #ccc; height: calc(100% - 50px);">
+  <div class="d-flex">
+    <div class="card" style="width:50%; margin: 5px; min-height: 620px;">
+      <div class="card-header">
+        <h3 class="card-title">リスト</h3>
+      </div>
+      <div class="card-body p-2">
+        <table id="document-list-table" class="table table-bordered table-striped">
+          <thead>
+            <tr>
               <th>PDF名</th>
-              <th>操作</th>
-          </tr>
-      </thead>
-      <tbody>
-          {% for pdf in pdfs %}
-          <tr>
+              <th>削除</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for pdf in pdfs %}
+            <tr>
               <td><a href="{{ pdf.document.url }}" target="_blank">{{ pdf.name }}</a></td>
               <td><button onclick="deletePdf('{{ pdf.id }}')" class="delete-btn">✕</button></td>
-          </tr>
-          {% endfor %}
-      </tbody>
-    </table>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="card" style="width:50%; margin: 5px;">
+      <div class="card-header">
+        <h3 class="card-title">グループ</h3>
+      </div>
+      <div class="card-body p-2">
+        <table id="document-group-table" class="table table-bordered table-striped">
+          <thead>
+            <tr>
+              <th>グループ名</th>
+              <th>編集</th>
+              <th>削除</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for group in groups %}
+            <tr>
+              <td>{{ group.name }}</td>
+              <td><button class="edit-btn">...</button></td>
+              <td><button onclick="deletePdf('{{ pdf.id }}')" class="delete-btn">✕</button></td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 
-  <div class="d-flex">
-    <div>
-      <h2>グループ</h2>
-      <table class="pdf-table">
-        <thead>
-            <tr>
-                <th>グループ名</th>
-                <th>ファイル数</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for pdf in pdfs %}
-            <tr>
-                <td><a href="{{ pdf.document.url }}" target="_blank">{{ pdf.name }}</a></td>
-                <td><button onclick="deletePdf('{{ pdf.id }}')" class="delete-btn">✕</button></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-      </table>
-    </div>
-    <div>
-      <p>AAA</p>
-      <button>Edit</button>
-      <button>Delete</button>
-      <table class="pdf-table">
-        <thead>
-            <tr>
-                <th>グループ名</th>
-                <th>ファイル数</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for pdf in pdfs %}
-            <tr>
-                <td><a href="{{ pdf.document.url }}" target="_blank">{{ pdf.name }}</a></td>
-                <td><button onclick="deletePdf('{{ pdf.id }}')" class="delete-btn">✕</button></td>
-            </tr>
-            {% endfor %}
-        </tbody>
-      </table>
-    </div>
-  </div>
-  
   <div style="margin-top: 30px;">
     <h2>アップロード</h2>
-    <form id="uploadForm" class="input-group" action="{% url 'management:upload_pdf' %}" method="post" enctype="multipart/form-data" class="upload-form">
+    <form id="uploadForm" class="input-group" action="{% url 'management:upload_pdf' %}" method="post"
+      enctype="multipart/form-data" class="upload-form">
       {% csrf_token %}
       <input type="file" id="pdfInput" name="pdf_files" multiple onchange="handleFileSelect()" class="file-input">
-      <ul id="fileList" class="file-list"></ul>
+      <!-- <ul id="fileList" class="file-list"></ul> -->
+      <table id="document-upload-table" class="table table-bordered table-striped" style="background-color: #fff;"></table>
       <button type="submit" id="uploadBtn" class="upload-btn" style="display: none;">アップロード</button>
     </form>
   </div>
- 
 </div>
-
 {% endblock %}
 
 {% block script %}
 <script>
   function deletePdf(pdfId) {
-      if (confirm("このPDFを削除しますか？")) {
-          fetch(`/delete/${pdfId}/`, {
-              method: 'POST',
-              headers: {
-                  'X-CSRFToken': '{{ csrf_token }}',
-                  'Content-Type': 'application/json'
-              },
-              body: JSON.stringify({ pdf_id: pdfId })
-          }).then(response => {
-              if (response.ok) {
-                  location.reload();
-              } else {
-                  alert('削除中にエラーが発生しました。');
-              }
-          });
-      }
+    if (confirm("このPDFを削除しますか？")) {
+      fetch(`/delete/${pdfId}/`, {
+        method: 'POST',
+        headers: {
+          'X-CSRFToken': '{{ csrf_token }}',
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ pdf_id: pdfId })
+      }).then(response => {
+        if (response.ok) {
+          location.reload();
+        } else {
+          alert('削除中にエラーが発生しました。');
+        }
+      });
+    }
   }
 
   function handleFileSelect() {
     var fileInput = document.getElementById('pdfInput');
-    var fileList = document.getElementById('fileList');
+    var uploadTable = document.getElementById('document-upload-table');
     var uploadBtn = document.getElementById('uploadBtn');
 
-    fileList.innerHTML = ''; // リストをリセット
-
+    uploadTable.innerHTML = "<thead><tr><th>PDF</th><th>Progress</th></tr></thead>";
+    const tbody = document.createElement("tbody");
     for (var i = 0; i < fileInput.files.length; i++) {
-        var listItem = document.createElement('li');
-        listItem.textContent = fileInput.files[i].name;
-        fileList.appendChild(listItem);
-        uploadFile(fileInput.files[i], listItem);
+      const tr = document.createElement("tr");
+      tr.innerHTML = `<td><a href='${fileInput.files[i].url}' target='_blank'>${fileInput.files[i].name }</a></td>`;
+      tr.innerHTML += `<td></td>`;
+      tbody.appendChild(tr);
     }
+    uploadTable.appendChild(tbody);
 
     if (fileInput.files.length > 0) {
-        uploadBtn.style.display = 'inline-block';
+      uploadBtn.style.display = 'inline-block';
     } else {
-        uploadBtn.style.display = 'none';
+      uploadBtn.style.display = 'none';
     }
-}
+  }
 
-function uploadFile(file, listItem) {
+  function uploadFile(file, listItem) {
     var xhr = new XMLHttpRequest();
     xhr.open('POST', '{% url "management:upload_pdf" %}', true);
     var formData = new FormData();
     formData.append('pdf_files', file);
-    xhr.upload.onprogress = function(e) {
-        if (e.lengthComputable) {
-            var progress = (e.loaded / e.total) * 100;
-            listItem.textContent = file.name + ' - アップロード中... ' + Math.round(progress) + '% 完了';
-        }
+    xhr.upload.onprogress = function (e) {
+      if (e.lengthComputable) {
+        var progress = (e.loaded / e.total) * 100;
+        listItem.textContent = file.name + ' - アップロード中... ' + Math.round(progress) + '% 完了';
+      }
     };
-    xhr.onload = function() {
-        if (xhr.status === 200) {
-            listItem.textContent = file.name + ' - アップロード完了';
-        }
+    xhr.onload = function () {
+      if (xhr.status === 200) {
+        listItem.textContent = file.name + ' - アップロード完了';
+      }
     };
-    xhr.onerror = function() {
-        listItem.textContent = file.name + ' - アップロード中にエラーが発生しました';
+    xhr.onerror = function () {
+      listItem.textContent = file.name + ' - アップロード中にエラーが発生しました';
     };
     xhr.send(formData);
-}
+  }
 </script>
 {% endblock %}
