--- a/django_llm/src/templates/base.html
+++ b/django_llm/src/templates/base.html
@@ -1,31 +1,30 @@
+{% load adminlte_helpers i18n %}
 {% load static %}
 {% load django_bootstrap5 %}
 
 <html class="h-100">
     <head>
-        {% bootstrap_css %}
-        {% bootstrap_javascript %}
-        <title>RAG Chat</title>
-        <link rel="stylesheet" href="{% static 'css/base.css' %}">
         {% block additional_header %}
         {% endblock %}
+        
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
+        
+        <title>RAG Chat</title>
+        <link rel="stylesheet" href="https://cdn.datatables.net/t/bs-3.3.6/jqc-1.12.0,dt-1.10.11/datatables.min.css"/> 
+        <script src="https://cdn.datatables.net/t/bs-3.3.6/jqc-1.12.0,dt-1.10.11/datatables.min.js"></script>
+        <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     </head>
     <body class="h-100">
         <header class="w-100 d-flex justify-content-between align-items-center bg-dark px-3">
             <h1 class="fw-bold" style="color: #fff;">RAG Chat</h1>
-            <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button> -->
             <ul class="navbar-nav d-flex flex-row center">
                 <li class="nav-item mx-3 text-muted header-nav-link">
-                    <a class="nav-link active" aria-current="page" href="{% url 'management:pdf_list' %}">Home</a>
+                    <a class="nav-link active" aria-current="page" href="{% url 'management:pdf_list' %}" style="color: #fff;">Home</a>
                 </li>
-                <!-- <li class="nav-item mx-3 text-muted header-nav-link">
-                    <a class="nav-link" href="{% url 'search:index' %}">Search</a>
-                </li> -->
                 <li class="nav-item mx-3 text-muted header-nav-link">
-                    <a class="nav-link" href="{% url 'chat_bot:chat_bot' %}">Chat Bot</a>
+                    <a class="nav-link" href="{% url 'chat_bot:chat_bot' %}" style="color: #fff;">Chat Bot</a>
                 </li>
             </ul>
 
@@ -42,11 +41,6 @@
                 <li class="nav-item"><a class="nav-link" href="{% url 'accounts:login' %}">ログイン</a></li>
                 {% endif %}
             </ul>
-
-            <!-- <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
         </header>
 
         {% block content %}
