--- a/django_llm/src/static/css/base.css
+++ b/django_llm/src/static/css/base.css
@@ -7,7 +7,7 @@ header{
     box-shadow: 0px 0px 5px 0px hsla(0, 0%, 7%, 0.3);
 }
 nav {
-    width: 230px;
+    /* width: 230px; */
 }
 
 header h1 {
