--- a/django_llm/src/static/css/management.css
+++ b/django_llm/src/static/css/management.css
@@ -43,9 +43,9 @@ h1, h2, h3 {
     font-size: 18px;
 }
 
-.upload-form {
+/* .upload-form {
     margin-top: 20px;
-}
+} */
 
 .file-input {
     margin-bottom: 10px;
