--- a/StrategyCalculator/StrategyCalculator/View/MainWindow.xaml
+++ b/StrategyCalculator/StrategyCalculator/View/MainWindow.xaml
@@ -1,52 +1,206 @@
 ﻿<Window x:Class="StrategyCalculator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="取引戦略計算アプリ" Height="450" Width="600">
+        Title="取引戦略計算アプリ" SizeToContent="WidthAndHeight">
     <StackPanel Orientation="Vertical">
         <StackPanel Orientation="Horizontal" Margin="10">
             <Label Content="Strategy Name"/>
-            <TextBox  Width="100"/>
+            <TextBox Text="{Binding Strategy.Name}"  Width="100"/>
         </StackPanel>
 
-        <Button Content="Update Tab" Click="UpdateTabButton_Click"/>
-        <TabControl ItemsSource="{Binding TestDic1}">
-            <TabControl.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Key}"/>
-                </DataTemplate>
-            </TabControl.ItemTemplate>
-            <TabControl.ContentTemplate>
-                <DataTemplate>
-                    <ListView ItemsSource="{Binding Value}"/>
-                </DataTemplate>
-            </TabControl.ContentTemplate>
-        </TabControl>
-        <TabControl ItemsSource="{Binding TestDic2}">
-            <TabControl.ItemTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding Key}"/>
-                </DataTemplate>
-            </TabControl.ItemTemplate>
-            <TabControl.ContentTemplate>
-                <DataTemplate>
-                    <ListView ItemsSource="{Binding Value}"/>
-                </DataTemplate>
-            </TabControl.ContentTemplate>
-        </TabControl>
-
         <StackPanel Orientation="Horizontal" Margin="10">
-            <GroupBox Header="Parameter Definition" Margin="10" Height="200" Width="400">
-                <StackPanel Orientation="Vertical">
-                    <Button Content="追加" Click="AddParameterDefinitionButton_Click" Height="20" Width="100"/>
-                    <StackPanel Name="ParameterPanel" Orientation="Vertical"/>
-                </StackPanel>
+            <GroupBox MinHeight="200" MinWidth="400">
+                <GroupBox.HeaderTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Trade"/>
+                            <Button Content="+" Command="{Binding Path=DataContext.AddTradeCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" BorderThickness="0" Background="Transparent"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </GroupBox.HeaderTemplate>
+                <DataGrid Name="TradeGrid" ItemsSource="{Binding Strategy.TradeList}" CanUserAddRows="False" SelectionMode="Single" SelectionUnit="Cell" AutoGenerateColumns="False" BorderThickness="0" Background="Transparent">
+                    <DataGrid.Columns>
+                        <DataGridComboBoxColumn Header="Underlying" SelectedValueBinding="{Binding Underlying}">
+                            <DataGridComboBoxColumn.ElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.Underlying, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.ElementStyle>
+                            <DataGridComboBoxColumn.EditingElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.Underlying, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.EditingElementStyle>
+                        </DataGridComboBoxColumn>
+                        <DataGridComboBoxColumn Header="TradeType" SelectedValueBinding="{Binding TradeType}">
+                            <DataGridComboBoxColumn.ElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.TradeType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.ElementStyle>
+                            <DataGridComboBoxColumn.EditingElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.TradeType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.EditingElementStyle>
+                        </DataGridComboBoxColumn>
+                        <DataGridComboBoxColumn Header="OptionType" SelectedValueBinding="{Binding OptionType}">
+                            <DataGridComboBoxColumn.ElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.OptionType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.ElementStyle>
+                            <DataGridComboBoxColumn.EditingElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.OptionType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.EditingElementStyle>
+                        </DataGridComboBoxColumn>
+                        <DataGridComboBoxColumn Header="SubType" SelectedValueBinding="{Binding SubType}">
+                            <DataGridComboBoxColumn.ElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.SubType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.ElementStyle>
+                            <DataGridComboBoxColumn.EditingElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.SubType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.EditingElementStyle>
+                        </DataGridComboBoxColumn>
+                        <DataGridTextColumn Header="StrikeRatio" Binding="{Binding StrikeRatio}"/>
+                        <DataGridTextColumn Header="MaturityTenor" Binding="{Binding MaturityTenor}"/>
+                        <DataGridComboBoxColumn Header="Direction" SelectedValueBinding="{Binding Direction}">
+                            <DataGridComboBoxColumn.ElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.Direction, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.ElementStyle>
+                            <DataGridComboBoxColumn.EditingElementStyle>
+                                <Style TargetType="{x:Type ComboBox}">
+                                    <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.Direction, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                </Style>
+                            </DataGridComboBoxColumn.EditingElementStyle>
+                        </DataGridComboBoxColumn>
+                    </DataGrid.Columns>
+                </DataGrid>
             </GroupBox>
-            <GroupBox Header="Trade" Margin="10" MinHeight="200" MinWidth="400">
-                <StackPanel Orientation="Vertical">
-                    <Button Content="追加" Click="AddTradeButton_Click" Height="20" Width="100"/>
-                    <StackPanel Name="TradePanel" Orientation="Vertical"/>
-                </StackPanel>
-            </GroupBox>
+            <StackPanel Orientation="Vertical">
+                <GroupBox Header="Operation">
+                    <StackPanel Orientation="Vertical">
+                        <!--<GroupBox MinHeight="50" MinWidth="400">
+                            <GroupBox.HeaderTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Content="Position"/>
+                                        <Button Content="+" BorderThickness="0" Background="Transparent"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </GroupBox.HeaderTemplate>
+                            <DataGrid Name="PositionGrid" ItemsSource="{Binding Strategy.TradeList}" CanUserAddRows="False" SelectionMode="Single" SelectionUnit="Cell" AutoGenerateColumns="False" BorderThickness="0" Background="Transparent">
+                                <DataGrid.Columns>
+                                    <DataGridComboBoxColumn Header="Underlying" ItemsSource="{Binding Options.Underlying}"/>
+                                    <DataGridComboBoxColumn Header="TradeType" ItemsSource="{Binding Options.TradeType}"/>
+                                    <DataGridComboBoxColumn Header="OptionType" ItemsSource="{Binding Options.OptionType}"/>
+                                    <DataGridComboBoxColumn Header="SubType" ItemsSource="{Binding Options.SubType}"/>
+                                    <DataGridTextColumn Header="StrikeRatio"/>
+                                    <DataGridTextColumn Header="MaturityTenor"/>
+                                    <DataGridComboBoxColumn Header="Direction" ItemsSource="{Binding Options.Direction}"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </GroupBox>-->
+                        <GroupBox MinHeight="50" MinWidth="400">
+                            <GroupBox.HeaderTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Content="Settlement"/>
+                                        <Button Content="+" Command="{Binding Path=DataContext.AddSettlementCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" BorderThickness="0" Background="Transparent"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </GroupBox.HeaderTemplate>
+                            <DataGrid Name="SettlementGrid" ItemsSource="{Binding Strategy.SettlementList}" CanUserAddRows="False" SelectionMode="Single" SelectionUnit="Cell" AutoGenerateColumns="False" BorderThickness="0" Background="Transparent">
+                                <DataGrid.Columns>
+                                    <DataGridComboBoxColumn Header="Type" SelectedValueBinding="{Binding Type}">
+                                        <DataGridComboBoxColumn.ElementStyle>
+                                            <Style TargetType="{x:Type ComboBox}">
+                                                <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.SettlementType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                            </Style>
+                                        </DataGridComboBoxColumn.ElementStyle>
+                                        <DataGridComboBoxColumn.EditingElementStyle>
+                                            <Style TargetType="{x:Type ComboBox}">
+                                                <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.SettlementType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                            </Style>
+                                        </DataGridComboBoxColumn.EditingElementStyle>
+                                    </DataGridComboBoxColumn>
+                                    <DataGridTextColumn Header="DateCondition" Binding="{Binding DateCondition}"/>
+                                    <DataGridTextColumn Header="Time" Binding="{Binding Time}"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </GroupBox>
+                        <GroupBox MinHeight="50" MinWidth="400">
+                            <GroupBox.HeaderTemplate>
+                                <DataTemplate>
+                                    <StackPanel Orientation="Horizontal">
+                                        <Label Content="Hedge"/>
+                                        <Button Content="+" Command="{Binding Path=DataContext.AddHedgeCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" BorderThickness="0" Background="Transparent"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </GroupBox.HeaderTemplate>
+                            <DataGrid Name="HedgeGrid" ItemsSource="{Binding Strategy.HedgeList}" CanUserAddRows="False" SelectionMode="Single" SelectionUnit="Cell" AutoGenerateColumns="False" BorderThickness="0" Background="Transparent">
+                                <DataGrid.Columns>
+                                    <DataGridComboBoxColumn Header="Target" SelectedValueBinding="{Binding Target}">
+                                        <DataGridComboBoxColumn.ElementStyle>
+                                            <Style TargetType="{x:Type ComboBox}">
+                                                <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.HedgeTarget, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                            </Style>
+                                        </DataGridComboBoxColumn.ElementStyle>
+                                        <DataGridComboBoxColumn.EditingElementStyle>
+                                            <Style TargetType="{x:Type ComboBox}">
+                                                <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.HedgeTarget, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                            </Style>
+                                        </DataGridComboBoxColumn.EditingElementStyle>
+                                    </DataGridComboBoxColumn>
+                                    <DataGridComboBoxColumn Header="TradeType" SelectedValueBinding="{Binding TradeType}">
+                                        <DataGridComboBoxColumn.ElementStyle>
+                                            <Style TargetType="{x:Type ComboBox}">
+                                                <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.HedgeTradeType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                            </Style>
+                                        </DataGridComboBoxColumn.ElementStyle>
+                                        <DataGridComboBoxColumn.EditingElementStyle>
+                                            <Style TargetType="{x:Type ComboBox}">
+                                                <Setter Property="ItemsSource" Value="{Binding Path=DataContext.Options.HedgeTradeType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}}" />
+                                            </Style>
+                                        </DataGridComboBoxColumn.EditingElementStyle>
+                                    </DataGridComboBoxColumn>
+                                    <DataGridTextColumn Header="DateCondition" Binding="{Binding DateCondition}"/>
+                                    <DataGridTextColumn Header="Time" Binding="{Binding Time}"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                        </GroupBox>
+                    </StackPanel>
+                </GroupBox>
+
+                <GroupBox Header="Base Setting">
+                    <StackPanel Orientation="Vertical">
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Initial Value" Width="100"/>
+                            <TextBox Width="100" Height="20"/>
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label Content="Notional" Width="100"/>
+                            <TextBox Width="100" Height="20"/>
+                        </StackPanel>
+                    </StackPanel>
+                </GroupBox>
+            </StackPanel>
+
+            <Button Content="⇒" Command="{Binding ConvertToJsonCommand}" BorderThickness="0" Background="Transparent"  FontSize="60" VerticalAlignment="Center"/>
+
+            <StackPanel Orientation="Vertical">
+                <Label Content="JSON"/> 
+                <TextBox Text="{Binding Strategy.Json}" TextWrapping="Wrap" IsReadOnly="True" Width="200" Height="200"/>
+            </StackPanel>
+
         </StackPanel>
         
         <!--<Label Content="トレードの時間と条件"/>-->
