--- a/Portal/src/templates/home/main.html
+++ b/Portal/src/templates/home/main.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+{% load static %}
 
 {% block content_outer %}
 <div class="container-fluid">
@@ -140,7 +141,6 @@
                     </h3>
 
                     <div class="card-tools">
-
                         <div class="btn-group">
                             <button type="button" class="btn btn-success btn-sm dropdown-toggle" data-toggle="dropdown"
                                 data-offset="-52">
@@ -472,7 +472,47 @@
     </div>
 </div>
 </div>
+<div class="daterangepicker ltr show-ranges opensright">
+    <div class="ranges">
+        <ul>
+            <li data-range-key="Today">Today</li>
+            <li data-range-key="Yesterday">Yesterday</li>
+            <li data-range-key="Last 7 Days">Last 7 Days</li>
+            <li data-range-key="Last 30 Days">Last 30 Days</li>
+            <li data-range-key="This Month">This Month</li>
+            <li data-range-key="Last Month">Last Month</li>
+            <li data-range-key="Custom Range">Custom Range</li>
+        </ul>
+    </div>
+    <div class="drp-calendar left">
+        <div class="calendar-table"></div>
+        <div class="calendar-time" style="display: none;"></div>
+    </div>
+    <div class="drp-calendar right">
+        <div class="calendar-table"></div>
+        <div class="calendar-time" style="display: none;"></div>
+    </div>
+    <div class="drp-buttons"><span class="drp-selected"></span><button class="cancelBtn btn btn-sm btn-default"
+            type="button">Cancel</button><button class="applyBtn btn btn-sm btn-primary" disabled="disabled"
+            type="button">Apply</button> </div>
+</div>
 {% endblock %}
 
+
 {% block extra_js %}
+<script src="{% static 'admin-lte/plugins/jquery/jquery.min.js' %}"></script>
+<!-- Include DataTables JS files -->
+<script src="{% static 'admin-lte/plugins/datatables/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-responsive/js/dataTables.responsive.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-responsive/js/responsive.bootstrap4.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/jszip/jszip.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/pdfmake/pdfmake.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/pdfmake/vfs_fonts.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.html5.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.print.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/daterangepicker/daterangepicker.js' %}"></script>
 {% endblock %}
