--- a/Portal/src/templates/issue_management/main.html
+++ b/Portal/src/templates/issue_management/main.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
+{% load static %}
+
+
+{% block style_sheets %}
+<link rel="stylesheet" href="{% static 'admin-lte/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css' %}">
+<link rel="stylesheet" href="{% static 'admin-lte/plugins/datatables-responsive/css/responsive.bootstrap4.min.css' %}">
+<link rel="stylesheet" href="{% static 'admin-lte/plugins/datatables-buttons/css/buttons.bootstrap4.min.css' %}">
+{% endblock %}
+
 {% block page_name %}案件管理{% endblock %}
 
 {% block content_outer %}
@@ -57,7 +66,7 @@
             </div>
           </div>
 
-        <div class="card-tools">
+        <!-- <div class="card-tools">
             <ul class="pagination pagination-sm float-right">
                 <li class="page-item"><a class="page-link" href="#">«</a></li>
                 <li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -65,39 +74,82 @@
                 <li class="page-item"><a class="page-link" href="#">3</a></li>
                 <li class="page-item"><a class="page-link" href="#">»</a></li>
             </ul>
+        </div> -->
+    </div>
+
+    <div class="card-body p-2">
+        <div id="issue_table_wrapper" class="dataTables_wrapper dt-bootstrap4">
+            <table id="issue_table" class="table table-hover">
+                <thead>
+                    <tr>
+                        <th style="width: 10px">ID</th>
+                        <th>Status</th>
+                        <th>案件名</th>
+                        <th>概要</th>
+                        <th>分類</th>
+                        <th>担当者</th>
+                        <th>最終更新日</th>
+                        <th>登録日</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for issue in issues %}
+                    <tr onclick="location.href='{% url 'issue_detail' issue_id=issue.pk %}'">
+                        <td>{{ issue.id }}</td>
+                        <td><span class="badge bg-danger">{{ issue.status.status }}</span></td>
+                        <td>{{ issue.title }}</td>
+                        <td>{{ issue.description }}</td>
+                        <td>{{ issue.category.category }}</td>
+                        <td>{{ issue.pic }}</td>
+                        <td>{{ issue.updated_at }}</td>
+                        <td>{{ issue.registered_at }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
         </div>
     </div>
 
-    <div class="card-body p-0">
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th style="width: 10px">ID</th>
-                    <th>Status</th>
-                    <th>案件名</th>
-                    <th>概要</th>
-                    <th>分類</th>
-                    <th>担当者</th>
-                    <th>最終更新日</th>
-                    <th>登録日</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for issue in issues %}
-                <tr onclick="location.href='{% url 'issue_detail' issue_id=issue.pk %}'">
-                    <td>{{ issue.id }}</td>
-                    <td><span class="badge bg-danger">{{ issue.status.status }}</span></td>
-                    <td>{{ issue.title }}</td>
-                    <td>{{ issue.description }}</td>
-                    <td>{{ issue.category.category }}</td>
-                    <td>{{ issue.pic }}</td>
-                    <td>{{ issue.updated_at }}</td>
-                    <td>{{ issue.registered_at }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
 </div>
+{% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'admin-lte/plugins/jquery/jquery.min.js' %}"></script>
+<!-- Include DataTables JS files -->
+<script src="{% static 'admin-lte/plugins/datatables/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-responsive/js/dataTables.responsive.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-responsive/js/responsive.bootstrap4.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/dataTables.buttons.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.bootstrap4.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/jszip/jszip.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/pdfmake/pdfmake.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/pdfmake/vfs_fonts.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.html5.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.print.min.js' %}"></script>
+<script src="{% static 'admin-lte/plugins/datatables-buttons/js/buttons.colVis.min.js' %}"></script>
+
+<script>
+    $(document).ready(function () {
+    $("#issue_table").DataTable({
+        "responsive": true,
+        "lengthChange": true,
+        "autoWidth": false,
+        "displayLength": 10,
+        'pagingType': 'full_numbers',
+        "lengthMenu": [10, 15, 20, 25, 30, 50, 100, 1000],
+        "buttons": ["copy", "csv", "excel", "pdf", "print"],
+        "columnDefs": [
+            { "targets": 0, "visible": true },
+            { "targets": 3, "width": 500 },
+        ],
+    }).buttons().container().appendTo('#issue_table_wrapper .col-md-6:eq(0)');
+    $(table.table().container()).on('keyup', 'tfoot input', function () {
+        table
+            .column($(this).data('index'))
+            .search(this.value)
+            .draw();
+    });
+});
+</script>
 {% endblock %}
